[gd_scene load_steps=5 format=3 uid="uid://crrl6fjnlq25b"]

[ext_resource type="Script" uid="uid://c0inpydqsa3yc" path="res://Scripts/ui/main_menu.gd" id="1_ufw3w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kjwba"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_size = 12
shadow_offset = Vector2(0, 4.21)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tt5f1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_853f1"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ufw3w")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = -4.0
offset_right = 183.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = SubResource("StyleBoxFlat_kjwba")
text = "Play"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 392.0
offset_top = 464.0
offset_right = 759.0
offset_bottom = 512.0
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = SubResource("StyleBoxFlat_tt5f1")
text = "Quit"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 392.0
offset_top = 392.0
offset_right = 760.0
offset_bottom = 440.0
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = SubResource("StyleBoxFlat_853f1")
text = "Options"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 360.0
offset_top = 216.0
offset_right = 795.0
offset_bottom = 304.0
theme_override_font_sizes/font_size = 48
text = "Fantasical Felonies"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_options_pressed"]
